Verif+correction animations+indent

--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -12,6 +12,7 @@
    </head>
    <body>
       <div class="container">
+         <!-- loading spinner -->
          <div class="load">
             <p class="load__lettre--1 load__lettre">o</p>
             <p class="load__lettre--2 load__lettre">h</p>
@@ -23,13 +24,15 @@
             <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
+      <!-- Header -->
       <header class="header">
          <a href="../index.html"><i class="arrow fas fa-arrow-left" ></i></a>
          <h1 class="header__titre">ohmyfood</h1>
       </header>
+      <!-- Titres+images -->
       <main class="dimension">
          <div class="entete">
-            <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
+            <img src="../images/Maquettes_ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
          </div>
          <div class="titre">
             <h2>La note enchantée</h2>
@@ -38,6 +41,7 @@
             </div>
          </div>
          <div class="gridpage">
+            <!-- Carte menu -->
             <section id="menugrand" class="menu">
                <h4>ENTRÉES</h4>
                <article class="menu__carte menu__carte--1">
@@ -168,10 +172,12 @@
                </article>
             </section>
          </div>
+         <!-- Bouton commander -->
          <div class="commander">
             <input type="button" class="button" value="Commander">
          </div>
       </main>
+      <!-- Footer -->
       <footer>
          <nav>
             <h3>ohmyfood</h3>
