--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="./css/prefixed/style.css">
    </head>
    <body>
+      <!-- loading spinner -->
       <div class="container">
          <div class="load">
             <p class="load__lettre--1 load__lettre">o</p>
@@ -23,6 +24,7 @@
             <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
+      <!-- Header -->
       <header class="header">
          <h1 class="header__titre">ohmyfood</h1>
       </header>
@@ -31,10 +33,12 @@
          <p>Paris, Belleville</p>
       </div>
       <main>
+         <!-- Entete -->
          <div class="grid">
             <section class="welcome">
                <h2>Réservez le menu qui vous convient</h2>
                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+               <!-- Bouton Explorer -->
                <button class="welcome__button" type="button">       
                Explorez nos restaurants
                </button>
@@ -42,37 +46,38 @@
             <section class="fonctionnement">
                <h2>Fonctionnement</h2>
                <ol class="fonctionnement">
-                  <a href="#">
-                     <li class="ordre ordre--1">
+                  <li class="ordre ordre--1">
+                     <a href="#">
                         <p class="liste">1</p>
                         <i class="fas fa-mobile-alt"></i>
                         <p>Choisissez un restaurant</p>
-                     </li>
-                  </a>
-                  <a href="#">
-                     <li class="ordre ordre--2">
+                     </a>
+                  </li>
+                  <li class="ordre ordre--2">
+                     <a href="#">
                         <p class="liste">2</p>
                         <i class="fas fa-list-ul"></i>
                         <p>Composez votre menu</p>
-                     </li>
-                  </a>
-                  <a href="#">
-                     <li class="ordre ordre--3">
+                     </a>
+                  </li>
+                  <li class="ordre ordre--3">
+                     <a href="#">
                         <p class="liste">3</p>
                         <i class="fas fa-store"></i>
                         <p>Dégustez au restaurant</p>
-                     </li>
-                  </a>
+                     </a>
+                  </li>
                </ol>
             </section>
          </div>
+         <!-- Carte-liens restaurants -->
          <section class="restaurant">
             <h2>Restaurants</h2>
             <div class="restaurant__nav">
                <article class="restaurant__article">
                   <a class="restaurant__a" href="./html/menu_la_palette_du_gout.html">
                      <div class="restaurant__img">
-                        <img src="./images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
+                        <img src="./images/Maquettes_ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La_palette_du_goût">
                         <p class="restaurant__article--new">Nouveau</p>
                      </div>
                      <div class="restaurant__texte">
@@ -87,7 +92,7 @@
                <article class="restaurant__article">
                   <a class="restaurant__a" href="./html/menu_la_note_enchantée.html">
                      <div class="restaurant__img">
-                        <img src="./images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
+                        <img src="./images/Maquettes_ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La_note_enchantée">
                         <p class="restaurant__article--new">Nouveau</p>
                      </div>
                      <div class="restaurant__texte">
@@ -102,7 +107,7 @@
                <article class="restaurant__article">
                   <a class="restaurant__a" href="./html/menu_a_la_française.html">
                      <div class="restaurant__img">
-                        <img src="./images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
+                        <img src="./images/Maquettes_ohmyfood/images/restaurants/a_la_française.jpg" alt="À_la_française">
                      </div>
                      <div class="restaurant__texte">
                         <h3>À la française</h3>
@@ -116,7 +121,7 @@
                <article class="restaurant__article">
                   <a class="restaurant__a" href="./html/menu_le_delice_des_sens.html">
                      <div class="restaurant__img">
-                        <img src="./images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
+                        <img src="./images/Maquettes_ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le_délice_des_sens">
                      </div>
                      <div class="restaurant__texte">
                         <h3>Le délice des sens</h3>
@@ -130,6 +135,7 @@
             </div>
          </section>
       </main>
+      <!-- Footer -->
       <footer>
          <nav>
             <h3>ohmyfood</h3>
