--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="../css/prefixed/style.css">
    </head>
    <body>
+      <!-- loading spinner -->
       <div class="container">
          <div class="load">
             <p class="load__lettre--1 load__lettre">o</p>
@@ -23,13 +24,15 @@
             <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
+      <!-- Header -->
       <header class="header">
          <a href="../index.html"><i class="arrow fas fa-arrow-left"></i></a>
          <h1 class="header__titre">ohmyfood</h1>
       </header>
+      <!-- Titres+images -->
       <main class="dimension">
          <div class="entete">
-            <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
+            <img src="../images/Maquettes_ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
          </div>
          <div class="titre">
             <h2>À la française</h2>
@@ -38,6 +41,7 @@
             </div>
          </div>
          <div class="gridpage">
+            <!-- Carte menu -->
             <section class="menu">
                <h4>ENTRÉES</h4>
                <article class="menu__carte menu__carte--1">
@@ -156,10 +160,12 @@
                </article>
             </section>
          </div>
+         <!-- Bouton commander -->
          <div class="commander">
             <input type="button" class="button" value="Commander">
          </div>
       </main>
+      <!-- Footer -->
       <footer>
          <nav>
             <h3>ohmyfood</h3>
