--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -8,7 +8,7 @@
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
          ></script>
-      <link rel="stylesheet" href="../css/prefixed/style.css">
+      <link rel="stylesheet" href="../css/style.css">
    </head>
    <body>
       <!-- loading spinner -->
